--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@material-ui/icons": "^4.9.1",
-    "formik": "^2.1.4"
+    "formik": "^2.1.4",
+    "semantic-ui-react": "^0.88.2"
   }
 }
