ADDED : Storing Jwt Token In LocalStorage

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@material-ui/icons": "^4.9.1",
     "formik": "^2.1.4",
-    "semantic-ui-react": "^0.88.2"
+    "semantic-ui-react": "^0.88.2",
+    "yup": "^0.29.1"
   }
 }
