ADDED : My Profile And Admin Feature

--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
   "devDependencies": {
     "@material-ui/icons": "^4.9.1",
     "formik": "^2.1.4",
+    "history": "^5.0.0",
+    "mdbreact": "^4.27.0",
     "semantic-ui-react": "^0.88.2",
     "yup": "^0.29.1"
   }
