--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://Akshayakky.github.io/book-store-frontend",
   "name": "book-store-frontend",
   "version": "0.1.0",
   "private": true,
@@ -16,6 +17,8 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,6 +42,7 @@
   "devDependencies": {
     "@material-ui/icons": "^4.9.1",
     "formik": "^2.1.4",
+    "gh-pages": "^3.1.0",
     "history": "^5.0.0",
     "mdbreact": "^4.27.0",
     "semantic-ui-react": "^0.88.2",
